# ZedRC

./: README.md  bun.lockb  index.html  package-lock.json  package.json
src/: App.css  App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: custom.rs  main.rs
