[package]
name = "zedrc"
version = "0.0.0"
description = "Add zed to the right-click context menu"
authors = ["ZeroHawkeye"]
edition = "2021"
repository = "https://github.com/ZeroHawkeye/ZedRC"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
winreg = "0.52.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
